kubernetes/main/apps/downloads/radarr/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: nginx-internal
      ports:
        - port: &port 7878
          protocol: TCP
    # autobrr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: autobrr
      ports:
        - port: *port
          protocol: TCP
    # overseerr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: overseerr
      ports:
        - port: *port
          protocol: TCP
    # prowlarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: *port
          protocol: TCP
    # recyclarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: recyclarr
      ports:
        - port: *port
          protocol: TCP
  egress:
    # qBittorrent
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: qbittorrent
      ports:
        - port: 8080
          protocol: TCP
    # sabnzbd
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sabnzbd
      ports:
        - port: 8080
          protocol: TCP
    # prowlarr
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: 9696
          protocol: TCP
    # plex
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
          podSelector:
            matchLabels:
              app.kubernetes.io/name: plex
      ports:
        - port: 32400
          protocol: UDP
    # autoscan
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: autoscan
      ports:
        - port: 3030
          protocol: TCP
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
